# double-indent

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  double_indent.py  setup.cfg  tox.ini
.github/workflows/: ci.yml
tests/: double_indent_test.py  main_test.py
