[metadata]
name = double_indent
version = 0.1.2
description = a code formatter indenting function and mtehod definitions twice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theendlessriver13/double-indent
author = Jonas Kittner
author_email = theendlessriver13@users.noreply.github.com
license = MIT
license_file = LICENCE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = double_indent
install_requires =
    tokenize-rt
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    double-indent = double_indent:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
